<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/backgmainn"
    android:orientation="vertical"
    android:padding="4dp"
    android:scaleType="center"
    tools:context=".MainActivity">

    <!--
    التطبيق يدعم العربية والانجليزية
           نوعها عمودي
           والنص في ملف string باللغتين
           والازرار Horizontal Layout inside Vertical Layout
        -->
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="333dp"
        android:layout_height="69dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/tv_address"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#8DC886"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/imgv_myprofile"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:src="@drawable/mypro" />


    <EditText

        android:id="@+id/et_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/et_fname"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#00070C"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/et_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/et_lname"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#00070C"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/et_phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#00070C"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/et_city"
        android:inputType="textPersonName"
        android:textColor="#00070C"
        android:textSize="20sp" />
<!--        android:layout_gravity="right"
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_weight="1"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_exit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_add_corcte"
        android:layout_width="333dp"
        android:layout_height="69dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:padding="10dp"
        android:text="@string/tv_add_corcte"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#8DC886"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />
</LinearLayout>